--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "vue-template-compiler": "^2.5.2",
     "vue-test-utils": "^1.0.0-beta.11",
     "vuex": "^3.0.1",
+    "vuex-test-util": "^1.0.1",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
